style - fixed padding and margin

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
         <img src="./assets/image-005.jpg" class="small-image" />
         <img src="./assets/image-006.jpg" class="small-image" />
       </div>
-      <img src="./assets/image-004.jpg" class="large-image" />
-      <div class="dark-background">
-        <p>LOREM IPSUM</p>
-        <h1>L O R E M I P S U M <br />S E T A D E M I R</h1>
-        <h4>Click <i class="fa-solid fa-right-long"></i></h4>
+      <div class="large-image-container">
+        <img src="./assets/image-004.jpg" class="large-image" />
+        <div class="dark-background">
+          <p>LOREM IPSUM</p>
+          <h1>L O R E M I P S U M <br />S E T A D E M I R</h1>
+          <p>Click <i class="fa-solid fa-right-long"></i></p>
+        </div>
       </div>
     </div>
   </body>
